--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     height: 100%;
     font-size: 1em;
-    font-family: Menlo, Monaco, Consolas, monospace;
+    font-family: Menlo,Monaco,Consolas,monospace;
     box-sizing: border-box;
     border-radius: inherit;
     overflow: hidden;
@@ -179,9 +179,9 @@
     background-color: #faebd7;
     border-radius: 5px;
     padding: 3px 5px;
+    font-family: Menlo,Monaco,Consolas,monospace;
 }
 .ai-chatbot-message pre code {
-    font-family: Menlo, Monaco, Consolas, monospace;
     font-size: 0.9em;
     border-radius: inherit;
     background-color: transparent;
@@ -400,4 +400,24 @@
 .ai-chatbo-abort-icon {
     color: inherit;
     line-height: 1.0;
+}
+
+.ai-chatbot-code-copy-button {
+    width: 24px;
+    height: 24px;
+    padding: 4px;
+    color: rgba(0,0,0,0.5);
+}
+.ai-chatbot-code-copy-button svg {
+    width: 16px;
+    height: 16px;
+    fill: currentColor;
+    pointer-events: none;
+}
+.ai-chatbot-code-copy-button > span {
+    line-height: 1.0;
+    font-size: 0;
+}
+.ai-chatbot-code-copy-button:hover {
+    background-color: rgba(0,0,0,0.05);
 }
