--- a/src/style.css
+++ b/src/style.css
@@ -220,6 +220,9 @@
     background: var(--primary-brand-color, #007aff);
     color: #fff;
 }
+.ai-chatbot-message-content video {
+    max-width: 100%;;
+}
 
 .ai-chatbot-message-thinking {
     margin-bottom: 5px;
@@ -552,6 +555,18 @@
     display: none;
     align-items: center;
     justify-content: center;
+    overflow: auto;
+}
+.ai-chatbot-mermaid-diagram {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    width: auto;
+    width: fit-content;
+    height: fit-content;
+}
+.ai-chatbot-mermaid-wrapper.fullscreen .ai-chatbot-mermaid-diagram {
+    min-width: 100%;
 }
 .ai-chatbot-mermaid-source-container {
     width: 100%;
