--- a/src/style.css
+++ b/src/style.css
@@ -56,7 +56,7 @@
     align-items: center;
     flex-wrap: nowrap;
     height: 36px;
-    background-color: var(--primary-brand-color, #007aff);
+    background-color: var(--primary-brand-color, #1e96eb);
     color: #fff;
     border-top-left-radius: inherit;
     border-top-right-radius: inherit;
@@ -136,7 +136,7 @@
 .ai-chatbot-avatar {
     display: flex;
     align-items: flex-end;
-    align-self: flex-end;
+    align-self: flex-start;
     box-sizing: border-box;
 }
 .ai-chatbot-avatar > svg {
@@ -147,7 +147,7 @@
     flex-shrink: 0;
     align-self: flex-end;
     margin-bottom: 2px;
-    background: var(--primary-brand-color, #007aff);
+    background: var(--primary-brand-color, #1e96eb);
     border-radius: 50%;
     box-sizing: border-box;
 }
@@ -195,11 +195,16 @@
 }
 .ai-chatbot-message-content code {
     font-size: 0.9em;
-    background-color: rgba(205, 66, 70, .1);
-    color: #ac2f33;
-    border-radius: 5px;
-    padding: 2px 5px;
     font-family: Menlo,Monaco,Consolas,monospace;
+    /*background-color: rgba(205, 66, 70, .1);
+    color: #ac2f33;*/
+    color: rgb(155, 110, 35);
+    background-color: rgb(255, 245, 227);
+    border-radius: 5px;
+    padding: 2px 4px;
+    word-break: break-all;
+    box-sizing: border-box;
+    overflow-wrap: break-word;
 }
 .ai-chatbot-message pre code {
     font-size: 0.9em;
@@ -208,16 +213,18 @@
     color: inherit;
 }
 .ai-chatbot-assistant-message .ai-chatbot-message {
+    max-width: 100%;
+    width: 100%;
     text-align: left;
     background: #f9f9f9;
     color: rgb(0, 0, 0);
-    border-bottom-left-radius: 2px;
+    border-top-left-radius: 2px;
     box-shadow: 0 0 0 1px rgba(17, 20, 24, .1), 0 1px 1px rgba(17, 20, 24, .2);
 }
 .ai-chatbot-user-message .ai-chatbot-message {
     text-align: left;
     border-bottom-right-radius: 2px;
-    background: var(--primary-brand-color, #007aff);
+    background: var(--primary-brand-color, #1e96eb);
     color: #fff;
 }
 .ai-chatbot-message-content video {
@@ -282,7 +289,7 @@
     display: flex;
     gap: 4px;
     padding: 6px 0;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     box-sizing: border-box;
 }
@@ -304,7 +311,7 @@
     width: 7px;
     opacity: 0.7;
     border-radius: 50%;
-    background: var(--primary-brand-color, #007aff);
+    background: var(--primary-brand-color, #1e96eb);
     box-sizing: border-box;
     animation: aiChatbotWaitingDotPulse 1.8s ease-in-out infinite;
 }
@@ -384,7 +391,7 @@
     box-shadow: 0 0 0 0 rgba(33, 93, 176, 0), 0 0 0 0 rgba(33, 93, 176, 0), inset 0 0 0 1px rgba(17, 20, 24, .2), inset 0 1px 1px rgba(17, 20, 24, .3);
 }
 .ai-chatbot-input-group:focus-within {
-    box-shadow: 0 0 0 1px var(--primary-brand-color, #007aff), inset 0 1px 1px rgba(16, 22, 26, .2);
+    box-shadow: 0 0 0 1px var(--primary-brand-color, #1e96eb), inset 0 1px 1px rgba(16, 22, 26, .2), 0px 0px 0px 2px rgba(30,150,235,.3);
 }
 .ai-chatbot-input-group textarea {
     flex: 1;
@@ -416,7 +423,7 @@
     height: 32px;
     padding: 0;
     border-radius: 50%;
-    color: var(--primary-brand-color, #007aff);
+    color: var(--primary-brand-color, #1e96eb);
 }
 .ai-chatbot-input-actions button:hover {
     background-color: rgba(0,0,0,0.05);
