--- a/src/style.css
+++ b/src/style.css
@@ -1,17 +1,66 @@
 .ai-chatbot {
+    --aichatbot-primary-brand-color: #1e96eb;
+    --aichatbot-text-primary-color: #1c2127;
+    --aichatbot-text-secondary-color: #8e8d91;
+    --aichatbot-text-disable-color: #a9a9ad;
+    --aichatbot-text-emphasis-color: var(--aichatbot-primary-brand-color);
+    --aichatbot-icon-activated: var(--aichatbot-primary-brand-color);
+    --aichatbot-icon-primary: #5f6b7c;
+    --aichatbot-icon-disable: #b3b3b3;
+    --aichatbot-btn-default-bgcolor: #f6f7f9;
+}
+
+.ai-chatbot {
     display: flex;
     flex-direction: column;
     height: 100%;
     font-size: 1em;
-    font-family: Menlo,Monaco,Consolas,monospace;
+    font-family: Menlo, Monaco, Consolas, monospace, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    line-height: 1.4285714;
+    color: var(--aichatbot-text-primary-color);
     box-sizing: border-box;
     border-radius: inherit;
     overflow: hidden;
 }
-.ai-chatbot .ai-chatbot-hide {
+.ai-chatbot-hide {
     display: none !important;
 }
-.ai-chatbot button {
+.ai-chatbot-round {
+    border-radius: 50% !important;
+}
+.ai-chatbot-icon {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--aichatbot-icon-primary);
+    line-height: 1.0;
+}
+
+.ai-chatbot-panel-l,
+.ai-chatbot-panel-c,
+.ai-chatbot-panel-r {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    flex-wrap: nowrap;
+    gap: 6px;
+    box-sizing: border-box;
+}
+.ai-chatbot-panel-l {
+    justify-content: flex-start;
+}
+.ai-chatbot-panel-c {
+    justify-content: center;
+}
+.ai-chatbot-panel-r {
+    justify-content: flex-end;
+}
+
+.ai-chatbot-btn input[type='file'] {
+    display: none;
+}
+.ai-chatbot-btn {
+    color: var(--aichatbot-text-primary-color);
     background: none;
     -webkit-appearance: none;
     appearance: none;
@@ -26,28 +75,91 @@
     text-align: center;
     min-width: 24px;
     min-height: 24px;
-    line-height: 1em;
-    padding: 4px;
-    background: none;
-    box-shadow: none;
-    box-sizing: border-box;
+    line-height: 1.4285714;
+    padding: 0 4px;
     border-radius: 5px;
+    box-sizing: border-box;
+    background-color: var(--aichatbot-btn-default-bgcolor);
+    box-shadow: inset 0 0 0 1px rgba(17, 20, 24, .2), 0 1px 2px rgba(17, 20, 24, .1);
 }
-.ai-chatbot button:hover {
-    background-color: rgba(0,0,0,0.06);
-}
-.ai-chatbot-button-icon {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
+.ai-chatbot-btn svg {
     width: 16px;
     height: 16px;
-    color: rgba(0,0,0,0.6);
 }
-.ai-chatbot-button-group {
-    display: flex;
+.ai-chatbot-btn .ai-chatbot-icon {
+    width: 16px;
+    height: 16px;
+}
+.ai-chatbot-btn-text {
+    flex: 1;
+    display: inline-flex;
+    align-items: center;
+    box-sizing: border-box;
+}
+.ai-chatbot-btn:not([data-intent]):hover {
+    background-clip: padding-box;
+    background-color: rgba(0,0,0,0.06);
+    box-shadow: inset 0 0 0 1px rgba(17, 20, 24, .2), 0 1px 2px rgba(17, 20, 24, .2);
+}
+.ai-chatbot-btn:not([data-intent]):active {
+    background-color: #dce0e5;
+    box-shadow: inset 0 0 0 1px rgba(17, 20, 24, .2), 0 1px 2px rgba(17, 20, 24, .2);
+}
+.ai-chatbot-btn[data-variant='outline'] {
+    background-color: transparent;
+}
+.ai-chatbot-btn[data-variant='minimal'] {
+    background-color: transparent;
+    box-shadow: none !important;
+}
+.ai-chatbot-btn[data-variant='fill'] {
+    box-shadow: none !important;
+}
+.ai-chatbot-btn[data-intent='emphasis'] {
+    background-color: var(--aichatbot-text-emphasis-color);
+    color: #fff;
+}
+.ai-chatbot-btn[data-intent='emphasis'] .ai-chatbot-icon {
+    color: inherit;
+}
+.ai-chatbot-btn[disabled] {
+    background-color: var(--aichatbot-text-disable-color);
+    cursor: not-allowed;
+}
+.ai-chatbot-btn:not([disabled]).ai-chatbot-activated {
+    background-color: var(--aichatbot-text-emphasis-color);
+    color: #fff;
+}
+.ai-chatbot-btn:not([disabled]).ai-chatbot-activated .ai-chatbot-icon {
+    color: inherit;
+}
+
+.ai-chatbot-btn-group {
+    display: inline-flex;
     align-items: center;
     flex-wrap: nowrap;
+    gap: 0 !important;
+    padding: 0;
+}
+.ai-chatbot-btn-group:hover {
+    background-color: transparent !important;
+}
+.ai-chatbot-btn-group .ai-chatbot-btn {
+    background-color: transparent;
+    box-shadow: none !important;
+}
+.ai-chatbot-btn-group .ai-chatbot-btn:first-child {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
+.ai-chatbot-btn-group .ai-chatbot-btn:last-child {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+}
+.ai-chatbot-btn-group .ai-chatbot-btn:hover,
+.ai-chatbot-btn-group .ai-chatbot-btn:active {
+    box-shadow: none !important;
+    outline: none !important;
 }
 
 .ai-chatbot-header {
@@ -56,18 +168,13 @@
     align-items: center;
     flex-wrap: nowrap;
     height: 36px;
-    background-color: var(--primary-brand-color, #1e96eb);
+    padding: 0 10px;
+    background-color: var(--aichatbot-primary-brand-color);
     color: #fff;
     border-top-left-radius: inherit;
     border-top-right-radius: inherit;
     user-select: none;
-}
-.ai-chatbot-header > div {
-    flex: 1;
-    display: flex;
-    align-items: center;
-    gap: 6px;
-    padding: 0 10px;
+    box-sizing: border-box;
 }
 .ai-chatbot-header-icon,
 .ai-chatbot-header-title {
@@ -78,32 +185,13 @@
     width: 1.5em;
     height: 1.5em;
 }
-.ai-chatbot-header-actions {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    gap: 4px;
-}
-.ai-chatbot-header-actions button {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    appearance: none;
-    background: none;
-    border: 0 none;
-    width: 26px;
-    height: 26px;
-    padding: 0;
-    line-height: 1.0;
+.ai-chatbot-header .ai-chatbot-btn {
+    min-width: 26px;
+    min-height: 26px;
     color: #fff;
     border-radius: 6px;
-    box-sizing: border-box;
 }
-.ai-chatbot-header-actions button svg {
-    width: 16px;
-    height: 16px;
-}
-.ai-chatbot-header-actions button:hover {
+.ai-chatbot-header .ai-chatbot-btn:hover {
     background-color: rgba(0,0,0,0.2);
 }
 
@@ -147,7 +235,7 @@
     flex-shrink: 0;
     align-self: flex-end;
     margin-bottom: 2px;
-    background: var(--primary-brand-color, #1e96eb);
+    background: var(--aichatbot-primary-brand-color);
     border-radius: 50%;
     box-sizing: border-box;
 }
@@ -216,15 +304,16 @@
     max-width: 100%;
     width: 100%;
     text-align: left;
-    background: #f9f9f9;
+    background: #f1f5f9;
     color: rgb(0, 0, 0);
     border-top-left-radius: 2px;
-    box-shadow: 0 0 0 1px rgba(17, 20, 24, .1), 0 1px 1px rgba(17, 20, 24, .2);
+    /*box-shadow: 0 0 0 1px rgba(17, 20, 24, .1), 0 1px 1px rgba(17, 20, 24, .2);*/
+    box-shadow: none;
 }
 .ai-chatbot-user-message .ai-chatbot-message {
     text-align: left;
     border-bottom-right-radius: 2px;
-    background: var(--primary-brand-color, #1e96eb);
+    background: var(--aichatbot-primary-brand-color);
     color: #fff;
 }
 .ai-chatbot-message-content video {
@@ -311,7 +400,7 @@
     width: 7px;
     opacity: 0.7;
     border-radius: 50%;
-    background: var(--primary-brand-color, #1e96eb);
+    background: var(--aichatbot-primary-brand-color);
     box-sizing: border-box;
     animation: aiChatbotWaitingDotPulse 1.8s ease-in-out infinite;
 }
@@ -325,16 +414,14 @@
     animation-delay: 0.4s;
 }
 
-.ai-chatbot-suggestion {
+.ai-chatbot-composer {
     position: relative;
     z-index: 2;
     min-height: 30px;
     padding: 15px;
-    display: flex;
-    flex-direction: column;
     box-sizing: border-box;
 }
-.ai-chatbot-suggestion::before {
+.ai-chatbot-composer::before {
     display: none;
     content: "";
     position: absolute;
@@ -356,45 +443,25 @@
     margin-bottom: 12px;
     box-sizing: border-box;
 }
-.ai-chatbot-suggestion-tools button {
-    min-width: 30px;
-    min-height: 30px;
-    padding: 5px 10px;
-    background-color: #F6F7F9;
-    border: 1px solid rgba(28, 33, 39, .2);
-    border-radius: 5px;
-}
-.ai-chatbot-suggestion-tools button:hover {
-    background: #EDEFF2;
-    border-color: rgba(28, 33, 39, .3);
-    box-shadow: none;
-    text-decoration: none;
-}
-.ai-chatbot-suggestion-tools .ai-tool-icon {
-    display: flex;
-    align-items: center;
-    line-height: 1.0;
-}
-.ai-chatbot-suggestion-tools .ai-tool-text {
-    display: flex;
-    align-items: center;
+.ai-chatbot-suggestion-tools .ai-chatbot-btn {
+    min-width: 26px;
+    min-height: 26px;
+    padding: 4px 8px;
 }
 
-.ai-chatbot-input-group {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-    border-radius: 8px;
-    background-color: rgba(0,0,0,0.03);
+.ai-chatbot-input-container {
+    background-color: rgba(0,0,0,0.01);
     padding: 8px;
     box-sizing: border-box;
+    border-radius: 8px;
     box-shadow: 0 0 0 0 rgba(33, 93, 176, 0), 0 0 0 0 rgba(33, 93, 176, 0), inset 0 0 0 1px rgba(17, 20, 24, .2), inset 0 1px 1px rgba(17, 20, 24, .3);
 }
-.ai-chatbot-input-group:focus-within {
-    box-shadow: 0 0 0 1px var(--primary-brand-color, #1e96eb), inset 0 1px 1px rgba(16, 22, 26, .2), 0px 0px 0px 2px rgba(30,150,235,.3);
+.ai-chatbot-input-container[data-focused='true'],
+.ai-chatbot-input-container:focus-within {
+    box-shadow: 0 0 0 1px var(--aichatbot-primary-brand-color), inset 0 1px 1px rgba(16, 22, 26, .2), 0px 0px 0px 2px rgba(30,150,235,.3);
 }
-.ai-chatbot-input-group textarea {
-    flex: 1;
+.ai-chatbot-input-container textarea {
+    display: block;
     width: 100%;
     border: 0 none;
     font-size: 14px;
@@ -408,63 +475,196 @@
     border-radius: 3px;
     overflow: auto;
 }
-.ai-chatbot-input-group textarea:focus {
+.ai-chatbot-input-container textarea:focus {
     outline: none;
 }
 .ai-chatbot-input-actions {
+    width: 100%;
     display: flex;
-    gap: 4px;
+    gap: 8px;
     flex-direction: row;
     flex-wrap: nowrap;
+    margin-top: 10px;
     box-sizing: border-box;
 }
-.ai-chatbot-input-actions button {
-    width: 32px;
-    height: 32px;
+.ai-chatbot-input-actions .ai-chatbot-btn {
+    min-width: 26px;
+    min-height: 26px;
+}
+
+.ai-chatbot-file-preview-grid {
+    width: 100%;
+    display: flex;
+    gap: 4px;
+    align-items: flex-start;
+    justify-content: flex-start;
+    box-sizing: border-box;
+}
+.ai-chatbot-file-preview-item {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 0 0 auto;
+    width: 58px;
+    height: 58px;
+    border-radius: 4px;
+    background-color: rgba(0,0,0,0.01);
+    border: 1px solid rgba(0,0,0,0.1);
+    cursor: pointer;
+}
+.ai-chatbot-file-preview-item img {
+    max-width: 100%;
+    max-height: 100%;
+    border: 0 none;
+}
+.ai-chatbot-action-rmfile {
+    position: absolute;
+    right: -8px;
+    top: -7px;
+    z-index: 2;
+    display: none;
+    min-width: 0;
+    min-height: 0;
     padding: 0;
-    border-radius: 50%;
-    color: var(--primary-brand-color, #1e96eb);
+    width: 16px;
+    height: 16px;
+    background-color: #fff !important;
+    cursor: pointer;
 }
-.ai-chatbot-input-actions button:hover {
+.ai-chatbot-action-rmfile svg {
+    width: 10px;
+    height: 10px;
+}
+.ai-chatbot-action-rmfile:hover {
+    background-color: #fdeceb !important;
+    color: #eb4335;
+}
+.ai-chatbot-action-rmfile:hover .ai-chatbot-icon {
+    color: #eb4335;
+}
+.ai-chatbot-file-preview-item:hover .ai-chatbot-action-rmfile {
+    display: flex;
+}
+
+.ai-chatbot-input-group {
+    position: relative;
+}
+.ai-chatbot-input-group .ai-chatbot-icon {
+    position: absolute;
+    width: 16px;
+    height: 16px;
+    left: 5px;
+    top: 50%;
+    transform: translate(0, -50%);
+    pointer-events: none;
+}
+.ai-chatbot-input-group input[type="text"] {
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+    width: 100%;
+    border: 0 none;
+    outline: 0;
+    background-color: transparent;
+    padding: 4px 10px 3px 30px;
+    line-height: 1.428175;
+    border-radius: 5px;
+    box-shadow: 0 0 0 0 rgba(33, 93, 176, 0), 0 0 0 0 rgba(33, 93, 176, 0), inset 0 0 0 1px rgba(17, 20, 24, .2), inset 0 1px 1px rgba(17, 20, 24, .3);
+    box-sizing: border-box;
+}
+.ai-chatbot-input-group input[type="text"]:focus {
+    box-shadow: 0 0 0 1px var(--aichatbot-primary-brand-color), inset 0 1px 1px rgba(16, 22, 26, .2), 0px 0px 0px 2px rgba(30,150,235,.3);
+}
+
+.ai-chatbot-select-models .ai-chatbot-btn-text {
+    max-width: 80px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.ai-chatbot-select-models .ai-chatbot-model-settings {
+    display: none;
+}
+.ai-chatbot-select-models:hover .ai-chatbot-model-settings {
+    display: inline-flex;
+}
+
+.ai-chatbot-dropdown {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    background-color: #fff;
+    box-shadow: 0 0 0 1px rgba(17, 20, 24, .1), 0 1px 1px rgba(17, 20, 24, .2), 0 2px 6px rgba(17, 20, 24, .2);
+    border-radius: 6px;
+}
+.ai-chatbot-dropdown .ai-chatbot-searchbar {
+    padding: 6px;
+}
+.ai-chatbot-dropdown .ai-chatbot-menu {
+    flex: 1;
+    height: 100%;
+    padding: 6px;
+    min-height: 30px;
+    overflow-y: auto;
+    box-sizing: border-box;
+    border-radius: inherit;
+}
+.ai-chatbot-dropdown .ai-chatbot-menu-item {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    padding: 4px 8px; 
+    white-space: nowrap;  
+}
+.ai-chatbot-menu-item:hover {
     background-color: rgba(0,0,0,0.05);
+    border-radius: 5px;
+    cursor: pointer;
 }
-.ai-chatbo-abort-icon {
-    color: inherit;
-    line-height: 1.0;
+
+.ai-chatbot-models-panel {
+    position: relative;
+    z-index: 10;
+}
+.ai-chatbot-models-panel .ai-chatbot-dropdown {
+    bottom: 100%;
+    left: 0;
+    margin-bottom: 4px;
 }
 
 /* 复制按钮通用样式 */
-.ai-chatbot-copy-button svg {
+.ai-chatbot-copy-btn svg {
     width: 16px;
     height: 16px;
     fill: currentColor;
     pointer-events: none;
 }
-.ai-chatbot-copy-button .ai-chatbot-copied-icon,
-.ai-chatbot-copy-button .ai-chatbot-copied-text {
+.ai-chatbot-copy-btn .ai-chatbot-copied-icon,
+.ai-chatbot-copy-btn .ai-chatbot-copied-text {
     display: none;
 }
-.ai-chatbot-copy-button .ai-chatbot-copied-icon {
+.ai-chatbot-copy-btn .ai-chatbot-copied-icon {
     color: #32A467;
 }
-.ai-chatbot-copy-button .ai-chatbot-copied-text {
+.ai-chatbot-copy-btn .ai-chatbot-copied-text {
     align-items: center;
     justify-content: center;
     font-size: 12px;
     flex: 1;
 }
-.ai-chatbot-copy-button.copied .ai-chatbot-copy-icon {
+.ai-chatbot-copy-btn.copied .ai-chatbot-copy-icon {
     display: none;
 }
-.ai-chatbot-copy-button.copied .ai-chatbot-copied-icon,
-.ai-chatbot-copy-button.copied .ai-chatbot-copied-text {
+.ai-chatbot-copy-btn.copied .ai-chatbot-copied-icon,
+.ai-chatbot-copy-btn.copied .ai-chatbot-copied-text {
     display: inline-flex;
 }
 
 .ai-chatbot-codeblock-wrapper {
     position: relative;
 }
-.ai-chatbot button.ai-chatbot-code-copy-button {
+.ai-chatbot-code-copy-btn {
     position: absolute; 
     z-index: 2;
     top: 5px; 
@@ -478,7 +678,7 @@
     gap: 4px;
     color: #898989;
 }
-.ai-chatbot-codeblock-wrapper:hover .ai-chatbot-code-copy-button {
+.ai-chatbot-codeblock-wrapper:hover .ai-chatbot-code-copy-btn {
     display: inline-flex !important;
 }
 
@@ -587,25 +787,25 @@
     width: 100%;
     flex: 1;
 }
-.ai-chatbot-mermaid-preview-buttons,
-.ai-chatbot-mermaid-source-buttons {
+.ai-chatbot-mermaid-preview-btns,
+.ai-chatbot-mermaid-source-btns {
     display: none;
 }
 .ai-chatbot-mermaid-wrapper.show-mermaid-preview .ai-chatbot-mermaid-preview-container {
     display: flex;
 }
-.ai-chatbot-mermaid-wrapper.show-mermaid-preview .ai-chatbot-mermaid-preview-button {
+.ai-chatbot-mermaid-wrapper.show-mermaid-preview .ai-chatbot-mermaid-preview-btn {
     background-color: #fff;
 }
-.ai-chatbot-mermaid-wrapper.show-mermaid-preview .ai-chatbot-mermaid-preview-buttons {
+.ai-chatbot-mermaid-wrapper.show-mermaid-preview .ai-chatbot-mermaid-preview-btns {
     display: inline-flex;
 }
 .ai-chatbot-mermaid-wrapper.show-mermaid-source .ai-chatbot-mermaid-source-container {
     display: block;
 }
-.ai-chatbot-mermaid-wrapper.show-mermaid-source .ai-chatbot-mermaid-source-button {
+.ai-chatbot-mermaid-wrapper.show-mermaid-source .ai-chatbot-mermaid-source-btn {
     background-color: #fff;
 }
-.ai-chatbot-mermaid-wrapper.show-mermaid-source .ai-chatbot-mermaid-source-buttons {
+.ai-chatbot-mermaid-wrapper.show-mermaid-source .ai-chatbot-mermaid-source-btns {
     display: inline-flex;
 }
