--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@
     --aichatbot-text-disable-color: #a9a9ad;
     --aichatbot-text-emphasis-color: var(--aichatbot-primary-brand-color);
     --aichatbot-icon-activated: var(--aichatbot-primary-brand-color);
-    --aichatbot-icon-primary: #5f6b7c;
+    --aichatbot-icon-primary: #404854;
     --aichatbot-icon-disable: #b3b3b3;
     --aichatbot-btn-default-bgcolor: #f6f7f9;
 }
